feat: Introduce client-side settings modal for responsive grid and audio controls, configurable via `config.json` and query parameters, and add an implementation review document.

--- a/config.json
+++ b/config.json
@@ -2,5 +2,10 @@
     "defaultRows": 2,
     "defaultCols": 2,
     "defaultMuted": true,
-    "singleAudio": true
+    "singleAudio": true,
+    "gridSizes": {
+        "small": "1x1",
+        "medium": "2x2",
+        "large": "3x3"
+    }
 }
